<?xml version="1.0"?>
<package>
  <name>calibration</name>
  <version>0.1.1</version>
  <description>The calibration package</description>

  <maintainer email="qfeel@todo.todo">qfeel</maintainer>
  <license>BSD</license>

  <!-- system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <!-- packages -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>Eigen</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>Eigen</run_depend>
  <run_depend>cmake_modules</run_depend> 




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
